--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,5 +1,5 @@
 %# -*- coding: utf-8-unix -*-
-\title{机票个性化推荐的研究与探索}
+\title{机票个性化推荐方法}
 \author{某\quad{}某}
 \advisor{某某}
 \defenddate{2014年12月17日}
@@ -8,7 +8,7 @@
 \studentnumber{0010900990}
 \major{某某专业}
 
-\englishtitle{Research of Personalized Flight Recommendation}
+\englishtitle{Personalized Flight Recommendation}
 \englishauthor{\textsc{Mo Mo}}
 \englishadvisor{Prof. \textsc{Mou Mou}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
