--- a/tex/00_abstract.tex
+++ b/tex/00_abstract.tex
@@ -1,33 +1,35 @@
 \begin{abstract}
 
-在线机票订购的迅猛发展为用户提供在线选购机票的服务支持。虽然其丰富了用户的选择，但对于一些热门航线，搜索结果中的候选机票的数量过多。增加了用户的选择成本，降低了交互效率。如果能够根据每位用户的偏好，为用户从候选机票中推荐满足用户偏好的机票，可以更有效地克服机票购买中信息过载问题。
+随着在线旅游业的发展，越来越多的用户通过在线票务网站订购机票。用户只需输入起飞城市、到达城市和起飞日期，就可以检索到所有航空公司提供的候选机票。虽然在线机票订购丰富了用户的选择，但对于很多航线，候选机票的数量很大，一定程度上增加了用户的选择成本，降低了用户体验。如果能够根据用户的偏好，为用户从候选机票中推荐满足其出行计划的机票，就可以克服机票订购过程中的信息过载问题。
 
-论文主要研究了用户偏好建模及机票推荐。结合机票价格动态变化的特征并根据机票选购的实际业务场景，提出了基于内容的方法为用户提供个性化机票推荐。其后，论文分析了机票推荐中仍存在的一些问题，并细化了推荐场景，进一步提升机票推荐的准确率。文章的主要工作体现在以下几个方面：
+本文对个性化机票推荐问题进行了研究。首先，我们根据机票的特征构建了用户特征分布模型，提出基于用户偏好的机票推荐算法。其后，针对机票推荐中仍存在的一些问题，细化了推荐场景，进一步提升机票推荐的效果。本文主要工作体现在以下几个方面：
 
-1.提出基于用户特征分布的机票推荐算法。对数据集进行研究与分析，提取影响用户购买决策的机票特征。根据用户的历史订单构建用户特征分布模型；提出了模拟机票实时推荐场景。本条工作作为深入研究的基础，贯穿所有后续章节。
+1. 提出基于用户特征分布的机票推荐算法。结合数据分析与业务知识，对机票进行关键特征选取，提出了用户特征分布模型和基于该模型的机票推荐算法。本项工作作为深入研究的基础，贯穿后续章节。
 
-2.提出解决机票推荐冷启动问题的方法。分析航线特征分布差异对机票推荐准确率的影响，提出机票推荐冷启动问题。总体分为航线冷启动和用户冷启动两种类型。对于前者，根据航线特征分布和用户行为衡量航线间相似度，为用户构建修正混合模型；对于后者，结合共同乘客和同乘关系组成用户间的社会关系，提出增强用户模型的算法。
+2. 研究机票推荐中的冷启动问题。分析了航线间差异对机票推荐的影响，对航线冷启动和用户冷启动两类问题进行研究。对于前者，我们提出了根据航线特征分布和用户行为分布衡量航线间相似度的方法，提出了修正混合模型。对于后者，结合用户间的共同乘客和同乘关系，为用户构建了社会关系，提出了增强用户模型。
 
-3.提出结合共享账户乘客预测的机票推荐算法。根据同一账户下乘客的偏好差异，提出了机票推荐中共享账户问题。使用作者-主题模型对乘客的概率分布进行预测。并结合当前会话的上下文信息计算乘客概率分布，将乘客预测结果结合到机票推荐过程中，提供更具针对性的推荐。
+3. 研究机票推荐中的共享账户问题。在机票订购场景中，一个账户可能包含多位乘客，这些乘客间偏好可能有所差异。我们使用作者-主题模型对账户下每位乘客的行为习惯进行建模，结合当次购买的上下文信息对出行乘
+客进行预测，将乘客预测结果结合到推荐过程中，提供更具针对性的机票推荐。
 
-4.提出结合隐性特征的机票推荐算法。通过分析不同起飞日期的机票推荐准确率，验证了用户行为变化的事实。建立了转换矩阵将用户模型和机票内容映射到隐性空间。通过参数估计得到用户在隐性空间的偏好模型。综合了用户显性偏好模型和隐性偏好模型，得到最终机票推荐结果。
+4. 提出结合隐性特征的机票推荐算法。通过对比起飞日期分别在工作日、周末、节假日的用户的机票推荐效果，揭示了用户行为在不同起飞日期可能发生变化的事实。我们建立了转换矩阵将用户模型和机票内容映射到隐性空间，通过参数估计对用户在隐性空间的偏好模型进行训练。最后，我们综合了用户显性偏好和隐性偏好，提升了机票推荐准确率。
+
 
 \textbf{关键词：} 机票推荐，冷启动，主题模型，共享账户，隐性特征
 \end{abstract}
 
 \begin{englishabstract}
 
-Recent years, there are many passengers booking flights through online travel agencies. Typically, an user may search his travel information, then he will get a result containing dozens of candidate flights. Thus a recommender system is necessary for better user experiences.
+Recent years, there are more passengers booking flights through online travel agencies. Typically, an user may fillin his travel information, then he will get a result containing dozens of candidate flights. Thus a recommender system is necessary for better user experiences.
 
 This thesis mainly researches user preference based flight recommendation. We propose content-based recommendation approaches based on dynamic features of flights. In addition, we analyze some existing problems in flight recommendation, and improve recommendation further more. The main work of thesis is reflected as follow:
 
-1.We propose a feature distribution based preference model and flight recommendation approach. We analyze significant features of flight ticket and construct user preference model based on their historical orders. We then come up with a recommendation scene simulating to real flight ticket booking.
+1. We propose a feature distribution based preference model and flight recommendation approach. We analyze significant features of flight ticket and construct user preference model based on their historical orders. We then come up with a recommendation scene simulating to real flight ticket booking.
 
-2.We research the cold start problem. The problem is classified to two aspects, including cold start at aimed air route and cold start at all air routes. For the former one, we propose methods to evaluate similarity between air routes and construct a mixture preference model. For the latter problem, we take social relationship between users into consider, we then combine preference of them to improve recommendation.
+2. We research the cold start problem. The problem is classified to two aspects, including cold start at aimed air route and cold start at all air routes. For the former one, we propose methods to evaluate similarity between air routes and construct a mixture preference model. For the latter problem, we take social relationship between users into consider, we then combine preference of them to improve recommendation.
 
-3.We research shared account problem. It is quite common that a passenger books flights for his family members or colleagues. It is likely that every passenger has his own preferences. Unfortunately, before placing the order, people will not provide passengers' information. We may predict who are going to fly to improve recommendation. We use a author-topic model to predict passengers and combine the result into flight recommendation.
+3. We research shared account problem. It is quite common that a passenger books flights for his family members or colleagues. It is likely that every passenger has his own preferences. Unfortunately, before placing the order, people will not provide passengers' information. We may predict who are going to fly to improve recommendation. We use a author-topic model to predict passengers and combine the result into flight recommendation.
 
-4.We propose a recommendation algorithm based on latent factor. We notice that users' preference may alter at different takeoff dates, such as workday, weekend and holiday. We transform explicit features to latent factors, thus to capture the change of user' preference. Finally we provide recommendation combined with explicit features and latent factors.
+4. We propose a recommendation algorithm based on latent factor. We notice that users' preference may alter at different takeoff dates, such as workday, weekend and holiday. We transform explicit features to latent factors, thus to capture the change of user' preference. Finally we provide recommendation combined with explicit features and latent factors.
 
 
 \textbf{Keywords:} Flight Recommendation，Cold Start，Topic Model，Shared Account，Latent Factor.
