--- a/thesis.tex
+++ b/thesis.tex
@@ -73,7 +73,7 @@
 %% 正文内容
 \pagestyle{main}
 \include{tex/01_intro}
-%\include{tex/02_related}
+\include{tex/02_related}
 %\include{tex/03_baseline}
 
 %\include{tex/06_coldstart}
