--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -483,3 +483,58 @@
   year={1997}
 }
 
+
+@incollection{schafer2007collaborative,
+  title={Collaborative filtering recommender systems},
+  author={Schafer, J Ben and Frankowski, Dan and Herlocker, Jon and Sen, Shilad},
+  booktitle={The adaptive web},
+  pages={291--324},
+  year={2007},
+  publisher={Springer}
+}
+
+@article{goldberg1992using,
+  title={Using collaborative filtering to weave an information tapestry},
+  author={Goldberg, David and Nichols, David and Oki, Brian M and Terry, Douglas},
+  journal={Communications of the ACM},
+  volume={35},
+  number={12},
+  pages={61--70},
+  year={1992},
+  publisher={ACM}
+}
+
+@inproceedings{breese1998empirical,
+  title={Empirical analysis of predictive algorithms for collaborative filtering},
+  author={Breese, John S and Heckerman, David and Kadie, Carl},
+  booktitle={Proceedings of the Fourteenth conference on Uncertainty in artificial intelligence},
+  pages={43--52},
+  year={1998},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@inproceedings{herlocker1999algorithmic,
+  title={An algorithmic framework for performing collaborative filtering},
+  author={Herlocker, Jonathan L and Konstan, Joseph A and Borchers, Al and Riedl, John},
+  booktitle={Proceedings of the 22nd annual international ACM SIGIR conference on Research and development in information retrieval},
+  pages={230--237},
+  year={1999},
+  organization={ACM}
+}
+
+@inproceedings{sarwar2001item,
+  title={Item-based collaborative filtering recommendation algorithms},
+  author={Sarwar, Badrul and Karypis, George and Konstan, Joseph and Riedl, John},
+  booktitle={Proceedings of the 10th international conference on World Wide Web},
+  pages={285--295},
+  year={2001},
+  organization={ACM}
+}
+
+
+
+
+
+
+
+
