--- a/tex/00_abstract.tex
+++ b/tex/00_abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract}
-
+\addcontentsline{toc}{chapter}{摘要}
 随着在线旅游业的发展，越来越多的用户通过在线票务网站订购机票。用户只需输入起飞城市、到达城市和起飞日期，就可以检索到所有航空公司提供的候选机票。虽然在线机票订购丰富了用户的选择，但对于很多航线，候选机票的数量很大，一定程度上增加了用户的选择成本，降低了用户体验。如果能够根据用户的偏好，为用户从候选机票中推荐满足其出行计划的机票，就可以克服机票订购过程中的信息过载问题。
 
 本文对个性化机票推荐问题进行了研究。首先，我们根据机票的特征构建了用户特征分布模型，提出基于用户偏好的机票推荐算法。其后，针对机票推荐中仍存在的一些问题，细化了推荐场景，进一步提升机票推荐的效果。本文主要工作体现在以下几个方面：
@@ -18,7 +18,7 @@
 \end{abstract}
 
 \begin{englishabstract}
-
+\addcontentsline{toc}{chapter}{ABSTRACT}
 Recent years, there are more passengers booking flights through online travel agencies. Typically, an user may fillin his travel information, then he will get a result containing dozens of candidate flights. Thus a recommender system is necessary for better user experiences.
 
 This thesis mainly researches user preference based flight recommendation. We propose content-based recommendation approaches based on dynamic features of flights. In addition, we analyze some existing problems in flight recommendation, and improve recommendation further more. The main work of thesis is reflected as follow:
