--- a/tex/01_intro.tex
+++ b/tex/01_intro.tex
@@ -59,7 +59,7 @@
 
 在传统的推荐系统中，普遍认为每个账户仅具有一位成员，即一个账户代表一个偏好模型\cite{kabutoya2010modeling}。而在有些情景下，账户可能供多位成员使用，例如购物网站的账户通常会为一个家庭购买物品。如果能够对账户下的成员进行区分，就可以为每位成员建立精确的偏好模型，进而提升推荐效果。常用的解决共享账户问题的方法包括利用上下文信息识别成员\cite{adomavicius2011context}以及利用账户下不同的物品集合\cite{verstrepen2015top}表达偏好模型的差异。
 
-在线机票订购网站的账户可以为多位的乘客购票，不同乘客之间的偏好可能存在差异，因而会对推荐准确率造成影响。与一般的推荐场景不同的是，用户在提交订单后还需要填写乘客信息，因此每个账户中的乘客以及每条订单的参与者都是明确的。如果我们能够识别出参与本次订票的乘客，就可以提供更有针对性的推荐结果。
+机票订购网站的账户可以为多位的乘客购票，不同乘客之间的偏好可能存在差异，因而会对推荐准确率造成影响。与一般的推荐场景不同的是，用户在提交订单后还需要填写乘客信息，因此每个账户中的乘客以及每条订单的参与者都是明确的。如果我们能够识别出参与本次订票的乘客，就可以提供更有针对性的推荐结果。
 在本文的研究中，我们结合用户历史行为记录与当次购票的上下文计算出乘客分布概率，并将乘客预测结果融合到机票推荐的过程中，以提升机票推荐效果。
 
 
@@ -90,11 +90,11 @@
 
 第一张绪论，从业务应用场景分析了研究问题的应用意义及遇到的挑战。并从概括性的系统角度对研究内容的各方面可行性进行分析。其后，从学术研究和产业应用两个层面介绍了推荐系统和机票推荐的国内外研究现状。分析了机票推荐中目前存在的问题并在本文研究中予以分析、解决。最后，章节对本文主要研究工作进行简要介绍。
 
-第二章相关技术，介绍了本文工作中涉及到的相关研究领域。本章中依次介绍了基于内容推荐、主题模型、以及模型参数估计等相关技术。这些技术分别是后续各章节中本文展开研究工作的理论基础。
+第二章相关技术，介绍了本文工作中涉及到的相关研究领域。本章中依次介绍了基于内容推荐、协同过滤推荐以及主题模型等相关技术。这些技术分别是后续各章节中本文展开研究工作的理论基础。
 
 第三章机票数据介绍及基于特征分布的推荐算法。首先介绍了研究使用的数据，并结合业务经验知识提取机票数据中的重要特征。其次我们对机票推荐的场景进行介绍，该场景将贯穿后续章节。其后，构建了用户特征分布模型，根据衡量信息丰富度的熵值理论计算了用户对每个特征的偏重程度，组成完整的个性化机票推荐方法。在实验阶段，我们提取了一些热门航线，分析用户和订单的分布，进行机票推荐实验，并与两种基础的推荐策略进行了对比。在后续章节中，我们以此方法作为基线推荐算法，细化应用场景，深入研究，进一步提升个性化机票推荐的准确率。
 
-第四章机票推荐中的冷启动问题。通过分析航线间的特征分布和用户行为差异，以及这些差异对推荐结果的影响，提出了机票推荐场景中的冷启动问题。我们首先研究了航线冷启动问题，即用户在目标航线上的训练订单数量不足，而在别的航线上有一定数量的训练订单。我们关注用户在其他航线上的特征分布模型，通过比较航线间的相似度，选出最优相似航线，得到用户修正混合模型。其后，我们研究了用户冷启动问题，这类用户在所有航线上的训练订单数量都不足。我们通过分析用户与乘客的对应关系，通过共同乘客和同乘关系为用户建立社会关系。我们分别对这两种方法进行实验验证与评价。
+第四章机票推荐中的冷启动问题。通过分析航线间的特征分布和用户行为差异，以及这些差异对推荐结果的影响，提出了机票推荐中的冷启动问题。我们首先研究了航线冷启动问题，即用户在目标航线上的训练订单数量不足，而在别的航线上有一定数量的训练订单。我们关注用户在其他航线上的特征分布模型，通过比较航线间的相似度，选出最优相似航线，得到用户修正混合模型。我们还研究了用户冷启动问题，这类用户在所有航线上的训练订单数量都不足。我们通过分析用户与乘客的对应关系，通过共同乘客和同乘关系为用户建立社会关系。我们分别对这两种方法进行实验验证与评价。
 
 第五章结合共享账户的机票推荐算法。本章我们研究了账户中的乘客共享账户问题。在可以获取乘客身份信息的前提下，将作者-主题模型应用到乘客预测中。首先预定义特征词库，每条订单都使用词汇的集合表示。在模型训练过程中，每个账户下的订单视作一个语料库，每条订单视作一个文档，并将乘客视为作者。完成模型训练后，就当前会话的上下文信息计算出乘客预测概率分布。并将乘客预测结合到机票推荐过程中。
 在实验阶段，我们对乘客预测准确率和结合乘客预测的机票推荐准确率进行实验及分析，并与第三章提出的机票推荐方法进行对比。
