--- a/tex/02_related.tex
+++ b/tex/02_related.tex
@@ -48,23 +48,52 @@
 
 \section{协同过滤推荐}
 
-协同过滤（Collaborative Filtering）推荐系统根据其他用户对物品的评价，为目标用户提供推荐。协同过滤的思想最早是在文档检索领域诞生的。随着信息技术和互联网的发展，越来越多的诸如讨论帖、邮件清单等包含非正式内容的文档被收集到文档库中，用户难以快速了解文档的主题以及文档的质量水准，为文档检索带来了新的挑战。在二十世纪九十年代，结合人工评价的半自动文档检索系统可以有效地解决该类问题。随后，结合人工干预的信息检索及推荐系统被大量研究。
+协同过滤（Collaborative Filtering）推荐系统根据其他用户对物品的评价，为目标用户提供推荐。协同过滤的思想最早是在文档检索领域诞生的\cite{schafer2007collaborative}，随着信息技术和互联网的发展，越来越多的诸如讨论帖、邮件清单等包含非正式内容的文档被收集到文档库中，用户难以快速了解文档的主题以及文档的质量水准，为文档检索带来了新的挑战。在二十世纪九十年代的研究发现，结合人工评价的半自动文档检索系统可以有效地解决该类问题。随后，结合人工干预的信息检索及推荐系统被大量研究\cite{goldberg1992using}。
 
-协同过滤推荐系统的主要功能包括两个方面。第一是物品评价预测，其含义是对于一项用户未曾接触过的物品，预测用户对该物品的评价（喜好程度）。如果该物品新加入系统，缺乏用户行为记录，对其进行评价预测是较为困难的。对于第二是物品推荐，按照用户对物品的喜好程度，为其推荐一组物品。物品推荐通常建立在物品评价预测的基础上，除了以用户评价对物品进行排序之外，如何向用户展示推荐结果也是重要的考虑因素。
-
-
-\subsection{协同过滤推荐概述}
-
-近年来，协同过滤推荐领域有较多的研究成果，并且研究重心也从如何准确捕捉用户偏好转移到如何提升算法的性能方面。
+协同过滤推荐系统的主要功能包括两个方面。第一是物品评价预测，其含义是对于一项用户未曾接触过的物品，预测用户对该物品的评价（喜好程度）。如果该物品新加入系统，缺乏用户行为记录，对其进行评价预测是较为困难的。对于第二是物品推荐，按照用户对物品的喜好程度，为其推荐一组物品。物品推荐通常建立在物品评价预测的基础上，除了以用户评价对物品进行排序之外，如何向用户展示推荐结果也是重要的考虑因素。近年来，协同过滤推荐领域有较多的研究成果，并且研究重心也从如何准确捕捉用户偏好转移到如何提升算法的性能方面。本节我们主要介绍最常用的基于最近邻的协同过滤推荐算法。
 
 
+\subsection{基于最近邻的推荐算法}
+基于最近邻的推荐算法是协同过滤中最常用的方法之一，包括基于用户的最近邻算法和基于物品的最近邻算法两类。
 
+基于用户的最近邻算法为目标用户根据相似的其他用户做出评价预测及物品推荐。首先需要建立用户间相似度的衡量方法\cite{breese1998empirical}。
+\begin{equation}
+\label{eq:user_sim}
+	w(a,b) = \frac{\sum_j(v_{a,j}-\bar{v}_a)(v_{b,j}-\bar{v}_b)}{\sqrt{\sum_j(v_{a,j}-\bar{v}_a)^2\sum_j(v_{b,j}-\bar{v}_b)^2}}
+\end{equation}
 
+式\ref{eq:user_sim}衡量了用户之间的相似度。式中，$v_{a,j}$代表用户$a$对物品$j$的评分，$\bar{v}_a$代表用户$a$评价过的所有物品的平均评分。$j$代表用户$a$和用户$i$共同有过评分记录的物品。相似度$w(a,b)$的取值范围在$-1$到$1$之间。如果用户之间的相似度为负数，代表这两位用户之间的差异较大，在为用户挑选最近邻用户时通常会舍弃这部分用户。
 
+\begin{equation}
+\label{eq:rate_pred_ub}
+	p_{a,i} = \bar{v}_a + \frac{\sum_{n \in neighbor(a)}w(a,n)(r_{ni} - \bar{r}_n)}{\sum_{n \in neighbor(a)}w(a,n)}
+\end{equation}
+
+式\ref{eq:rate_pred_ub}计算了评价预测的结果。第一项$\bar{v}_a$是目标用户的历史平均评分，第二项根据每位近邻用户的相似度以及平均评分，对物品$i$进行评价。有些用户习惯为物品打高分，而有些用户习惯为物品打低分，公式使去中心化的方式适应用户的不同评价标准。
+
+基于物品的最近邻算法根据用户记录中的相似物品，为用户进行评价预测及物品推荐\cite{sarwar2001item}，可以认为基于物品的最近邻算法是基于用户的最近邻算法的转置。
+\begin{equation}
+\label{eq:item_sim}
+	w(i,j) = \frac{\sum_u(v_{u,i}-\bar{v}_u)(v_{u,j}-\bar{v}_u)}{\sqrt{\sum_u(v_{u,i}-\bar{v}_u)^2\sum_u(v_{u,j}-\bar{v}_u)^2}}
+\end{equation}
+
+\begin{equation}
+\label{eq:rate_pred_ib}
+	p_{a,i} = \frac{\sum_{j \in relaitem(a)}w(i,j)r_{ai}}{\sum_{j \in relaitem(a)}w(i,j)}
+\end{equation}
+
+式\ref{eq:item_sim}和\ref{eq:rate_pred_ib}分别描述了物品间相似度和根据物品相似度为用户进行评价预测的方法。为了衡量物品$i$和$j$的相似度，需要使用对这两项物品都有过评价记录的所有用户评分，公式中同样进行了去中心化处理。
+
+在最近邻推荐算法中，用户评价数据通常较稀疏。如果用户间共同评分记录的物品很少，或物品间有过共同评分记录的用户数量很少，他们容易得到很高的相似度，但这种相似度并不可靠。在系统实践中，通常仅考虑最近邻的$K$个用户或物品，并且增加一项评价记录数量的激励因子。
+此外，对于流行度较高的物品，大多数用户对它的评价都很高，这类物品不具备很强的参考价值。一些协同过滤推荐算法\cite{breese1998empirical}对物品的流行度增加了惩罚项。
+
+在系统性能方面，算法的时间复杂度与用户、物品、评价数量呈线性关系，因此需要对算法性能做进一步优化。通常系统不会维护全部用户对或物品对间的相似性，而在维持前$K$个相似项的基础上进行增量更新\cite{herlocker1999algorithmic}。此外，还可以对用户和物品进行聚类，快速定位与目标项相似的集合。
+
+一些算法通过为物品降维的方式减少应用的复杂性，降维后的维度通常能够代表物品包含的主题特征，根据主题特征可以为用户的评价和他们潜在的偏好建立映射关系，进而根据用户的潜在偏好为其进行推荐。通过这种方法，物品评价预测往往可以在常数时间内完成。然而，这些方法在离线计算部分的时间复杂度很高，算法实现复杂，维护的成本也很高。常用的降维方法包括支持向量分解、主成分分析、特征提取等。
 
 \subsection{协同过滤推荐的适用场景}
 
-为了使协同过滤具备较好的推荐效果，本小节对推荐应用场景应当具备一些特性进行阐述。首先考虑数据的组织及形式，即数据分布特性。
+为了使协同过滤具备较好的推荐效果，本节对系统应具备的一些特性进行阐述，再结合本文的研究工作， 对协同过滤在机票推荐领域的应用进行分析。首先考虑数据的组织及形式，即数据分布特性。
 
 \begin{enumerate}
   \item 系统包含一定数量的物品。如果系统中的物品较少，用户就可以自行了解每个物品，推荐系统的意义并不大。
@@ -74,7 +103,7 @@
   \item 用户偏好持续性。协同过滤推荐在用户偏好不经常发生改变的领域具有较好的效果。否则，用户过去对物品的评价就不具备较高的参考价值。
 \end{enumerate}
 
-其次，我们主要阐述应用场景的一些潜在要求。
+其次，协同过滤算法对系统还有一些潜在要求。
 
 \begin{enumerate}
 	\item 用户团体中存在偏好相似的用户。在团体中，与目标用户偏好相似的用户数量越多，协同过滤推荐的效果越好。反之，则难以产生预测与推荐。
@@ -82,25 +111,9 @@
 	\item 物品是同质的。系统中的物品应具备相同的本质特征，仅在用户的主观评价方面有所不同。协同过滤算法难以在不同质的物品间做出推荐。
 \end{enumerate}
 
-在机票推荐场景中，候选机票的数量很多，并且机票满足同质性。此外，用户的偏好具有较强的持久性。然而，在该领域应用协同过滤的算法仍具有一定的挑战性。首先，由于机票数量受限于航班的舱位，并且在起飞日期之前，机票的价格会发生持续的较大幅度波动，机票物品不具备较强的持久性。其次，用户对机票的评价较少且仅包含隐式正反馈评价，为协同过滤在机票推荐领域的应用带来了困难。
+在机票推荐场景中，候选机票的数量很多，并且机票满足同质性。此外，用户的偏好具有较强的持久性。然而，在该领域直接应用协同过滤推荐算法仍具有一定的挑战。首先，由于机票数量受限于航班的舱位，并且在起飞日期之前，机票的价格会发生持续的较大幅度波动，因此机票物品不具备较强的持久性。其次，用户对机票的评价较少且仅包含隐式正反馈评价，为协同过滤在机票推荐领域的应用带来了困难。
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+在本文的研究中，我们不直接使用协同过滤向用户推荐机票，而是借鉴协同过滤的思路衡量航线及用户间的相似度。将协同过滤与基于内容的推荐结合起来，在冷启动场景下进一步提升机票推荐效果。
 
 
 \section{主题模型}
@@ -237,7 +250,7 @@ p(\tilde{x}|\mathcal{X}) \approx \int_{\theta \in \Theta}p(\tilde{x}|\hat{\theta
 \fi
 
 \section{本章小结}
-本章介绍了与论文研究工作相关的一些技术。首先介绍了基于内容推荐，分析了基于内容推荐的系统架构及推荐流程；其次分析了基于内容推荐算法的优势与劣势。还介绍了主题模型，分析了三类常用的生成模型，包括它们的参数、生成过程等。最后介绍了在模型推导中常用的参数估计方法，包括最大似然估计以及结合了先验概率分布的最大后验概率估计。这三种技术为我们后续章节的研究做了理论铺垫。
+本章介绍了与论文研究工作相关的一些技术。首先介绍了基于内容推荐，分析了基于内容推荐的系统架构及流程，还分析了基于内容推荐算法的优势与劣势。其次介绍了协同过滤推荐技术，介绍了基于最近邻的协同过滤推荐算法以及算法的适用场景。同时结合本文工作，分析了在机票推荐领域应用基于内容推荐和协同过滤推荐的挑战性。最后介绍了主题模型，分析了三类常用的生成模型，包括它们的参数推导、生成过程等。这三种技术为我们后续章节的研究做了理论铺垫。
 
 
 
