--- a/tex/05_share.tex
+++ b/tex/05_share.tex
@@ -22,7 +22,7 @@
 
 我们的问题是在共享账户的乘客选购机票时，根据乘客历史行为模式以及当前会话的上下文预测出本次购票的目标乘客。在电子购物网站等无法获得成员真实身份的场景中，为了解决共享账户问题，通常需要设置几个虚拟成员，其中每个成员代表一种偏好模型。虚拟成员的数量可以是固定值，也可以是通过模型计算出的最优值。然而，这类算法通常只分析用户和物品之间的关系，无法利用当前会话中的上下文信息；并且对虚拟成员的预测准确率也无法验证。在机票推荐场景中，对乘客的预测准确率是可以进行验证的。
 
-在机票的乘客预测模型中，我们使用了作者主题模型（ATM）\parencite{rosen2004author,steyvers2004probabilistic,rosen2010learning}来分析乘客的行为模型。主题模型是一种生成模型，其主要观点是一篇文档可以抽取出混合的多个主题。作者主题模型在文章-主题的基础上又添加了作者-主题的关系。每个账户独立进行模型训练，可以将每个账户视为一个语料库。账户中出现过的所有乘客视为每位作者，每条机票订单视为一篇文档， 机票中的每个特征以及上下文信息视为预定义的词库。如果出现一张机票有多个乘客的情况，我们将他们视为共同作者。
+在机票的乘客预测模型中，我们使用了作者主题模型（ATM）\cite{rosen2004author,steyvers2004probabilistic,rosen2010learning}来分析乘客的行为模型。主题模型是一种生成模型，其主要观点是一篇文档可以抽取出混合的多个主题。作者主题模型在文章-主题的基础上又添加了作者-主题的关系。每个账户独立进行模型训练，可以将每个账户视为一个语料库。账户中出现过的所有乘客视为每位作者，每条机票订单视为一篇文档， 机票中的每个特征以及上下文信息视为预定义的词库。如果出现一张机票有多个乘客的情况，我们将他们视为共同作者。
 
 \section{乘客预测模型}
 事实上，主题模型在推荐系统中的应用很广泛。例如，在PLSA模型中，每个物品可以视作一个词汇，主题服从对物品的多项式分布，每个主题代表了一种隐性特征。每用户的偏好模型都服从对主题的多项式分布。用户的每次购买行为都可以被看作从该用户中抽样一个主题$Z$，再从该主题中抽取一个词汇的过程。由于机票具有动态属性，很难将不同价格的机票定义为同一个物品；并且每类机票的数量受限于飞机的型号，因此上述pLSA模型很难用到机票推荐领域中。
@@ -83,7 +83,7 @@ $K$ & 主题数量\\ \hline
 图\ref{fig:pro_graph}展示了作者主题模型的概率图。带阴影的变量是已知变量；其余是未知变量。每个方框代表一个过程，其右下角的数字是这个过程的循环次数。箭头连接线代表了变量间的条件依赖关系。这个图直观、清晰地表现了生成一条订单文档的过程。
 
 \subsection{模型参数推导}
-在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\parencite{george1993variable}等。传统的EM算法可能会陷入局部最优问题，并且这种算法的计算复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
+在上节的模型描述中，我们介绍了作者主题模型的两个参数矩阵，分别是包含$P$位乘客的乘客-主题分布参数以及包含$K$个主题的主题-词汇分布。有一些算法可以用来推导这些参数，如EM算法、Gibbs采样\cite{george1993variable}等。传统的EM算法可能会陷入局部最优问题，并且这种算法的计算复杂性较高。本章，我们使用Gibbs采样的算法，这种算法不直接进行参数推导，而通过计算抽取的乘客和主题的后验分布，对参数进行更新。因此计算过程较为简单。
 
 
 \begin{eqnarray}
@@ -131,15 +131,15 @@ P(x_{oi}=p,z_{oi}=t|w_{oi}=w,\mathbf{z}_{-oi},\mathbf{x}_{-oi},\mathbf{w}_{-oi},
 在最差情况下，模型每批迭代的时间复杂度是$O(NK|P|)$。其中$N$是一个账户下所有订单的总词汇数量。$|P|$是该账户下乘客最多的订单中乘客的数量，一般不会很大，与订单的总词汇数量相比可以视作常量。$K$是模型的主题数量。主题数量的取值不是固定的，我们可以在实验中确定最适合机票推荐业务中，乘客预测模型的数量。在模型迭代过程中，$|P|$以及$K$都可以看作常量，因此，使用Gibbs采样训练ATM模型的时间复杂度可以看作与总订单词汇数量$N$呈线性关系，可以用在大量用户数据的训练任务中。
 
 \begin{algorithm}
-\caption{ATM模型训练}
+\caption{Training of ATM}
 \label{algo:atm_train}
 \begin{algorithmic}[1]
 \Require
-\Statex 账户历史订单转化词汇表 $W$
+\Statex Word list of user's historical flight orders $W$
 
 \Ensure 
-\Statex 乘客-主题分布参数 $\Theta$
-\Statex 主题-词汇分布参数 $\Phi$
+\Statex Passenger-Topic Matrix $\Theta$
+\Statex Topic-Word Matrix $\Phi$
 
 \State $nak , nkv, nak\_sum, nkv\_sum \gets 0$
 \State $pl , tl \gets 0$
