--- a/tex/04_latent.tex
+++ b/tex/04_latent.tex
@@ -70,7 +70,7 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 	 & = &\frac{1}{1+e^{-(V(u,i) - V(u,j))}}
 \end{eqnarray}
 
-式\ref{eq:pij}中，$P(i,j)$代表用户对物品$i$比物品$j$有更强偏好的概率。我们为用户在两张机票上的偏好比较概率建立一个Sigmoid函数\parencite{jingfan1997novel}。如果我们假设用户选择的机票在候选机票列表中具有最强的偏好。则可以将用户实际选择的机票和任意一条候选机票构成一组成对(pair-wise)关系，并将式\ref{eq:pij}作为目标函数进行迭代学习。最终的学习效果是使得用户实际购买的机票有最大的效用值。该模型的目标函数如下：
+式\ref{eq:pij}中，$P(i,j)$代表用户对物品$i$比物品$j$有更强偏好的概率。我们为用户在两张机票上的偏好比较概率建立一个Sigmoid函数\cite{jingfan1997novel}。如果我们假设用户选择的机票在候选机票列表中具有最强的偏好。则可以将用户实际选择的机票和任意一条候选机票构成一组成对(pair-wise)关系，并将式\ref{eq:pij}作为目标函数进行迭代学习。最终的学习效果是使得用户实际购买的机票有最大的效用值。该模型的目标函数如下：
 
 \begin{equation}
 \label{eq:cost}
@@ -103,16 +103,16 @@ $F_i$ & 机票显性特征，增加起飞日期特征，维度 |F * 1| \\ \hline
 式\ref{eq:mix_rat}中，第一项代表了根据显性用户模型得到的排序结果，第二项代表根据隐性偏好模型的排序结果。我们最终根据每张机票的总体排位$R(I)$为用户进行推荐。
 
 \begin{algorithm}
-\caption{结合隐性特征的机票推荐}
+\caption{Latent factor combined flight recommendation}
 \label{algo:lat_rec}
 \begin{algorithmic}[1]
 \Require
-\Statex 用户历史订单 $O$
-\Statex 机票特征集合 $F$
-\Statex 搜索结果列表 $C$
+\Statex User's historical flight orders $O$
+\Statex Flight feature set $F$
+\Statex List of candidate flights $C$
 
 \Ensure 
-\Statex 排序后的机票列表 $R$
+\Statex List of re-ordered flight tickets $R$
 
 \State $W_u \gets \mathbf{0}$;
 \State $M_i \gets \mathbf{0}$;
